# odswriter

./: .gitignore  .travis.yml  LICENSE.txt  README  README.md  __init__.py  formula.py  ods_components.py  odsw_test.py  pyproject.toml  setup.py
.github/workflows/: python-release.yml  python-testing.yml
odswriter/: __init__.py  formula.py  ods_components.py
tests/: test_code_examples.py  test_io.py  test_via_gnumeric.py  test_via_libreoffice.py
